# ogl_engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  configure.py  main.cpp
internal/engine/: application.cpp  application.hpp  bind_context.hpp  camera.hpp  engine.md  geometry.cpp  geometry.hpp  mesh.cpp  mesh.hpp  perspective.cpp  scene.cpp  scene.hpp  scene_object.cpp  scene_object.hpp  shader_program.cpp  shader_program.hpp
internal/engine/application/: application.cpp  application.hpp  base_window.cpp  base_window.hpp  engine.cpp  engine.hpp  engine_impl.cpp  engine_impl.hpp  glfw_keyboard_input_manager.cpp  glfw_keyboard_input_manager.hpp  glfw_mouse_input_manager.cpp  glfw_mouse_input_manager.hpp  glfw_window.cpp  glfw_window.hpp  input_manager.cpp  input_manager.hpp  key_event.hpp  keyboard_input_manager.cpp  keyboard_input_manager.hpp  mouse_input_manager.cpp  mouse_input_manager.hpp  ogl_application.cpp  ogl_application.hpp  ogl_engine.cpp  ogl_engine.hpp
internal/engine/application/interfaces/: application_impl.cpp  application_impl.hpp
internal/engine/assets/: assets_manager.cpp  assets_manager.hpp  env_texture_importer.cpp  env_texture_importer.hpp  environment_texture.cpp  environment_texture.hpp  file_loader.hpp  geometry.cpp  geometry.hpp  image.cpp  image.hpp  image_2d.cpp  image_2d.hpp  image_2d_texture.cpp  image_2d_texture.hpp  image_importer.cpp  image_importer.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  mesh_bucket.cpp  mesh_bucket.hpp  mesh_data.cpp  mesh_data.hpp  mesh_importer.cpp  mesh_importer.hpp  mesh_instance.cpp  mesh_instance.hpp  shader_importer.cpp  shader_importer.hpp  shader_program.cpp  shader_program.hpp  text_file_loader.cpp  text_file_loader.hpp  texture2d.cpp  texture2d.hpp  texture2d_importer.cpp  texture2d_importer.hpp  texture_2d.cpp  (+3 more)
internal/engine/assets/interfaces/: file_loader.hpp  geometry_buffer.hpp  importer.hpp  texture.hpp  texture_visitor.hpp
internal/engine/assets/primitives/: cube.hpp
internal/engine/common/: bind_context.hpp  defines.hpp  for_each.hpp  image_format.hpp  material_config.hpp  va_for_each.hpp  vectors.hpp  vertex.hpp
internal/engine/scene/: camera.cpp  light_source.cpp  light_source.hpp  object3d.cpp  object3d.hpp  perspective.cpp  perspective.hpp  scene.cpp  scene.hpp  scene_factory.cpp  scene_factory.hpp  scene_object.cpp  scene_object.hpp  scene_rendered.cpp  scene_rendered.hpp  scene_renderer.cpp  scene_renderer.hpp
internal/engine/scene/components/: material_component.cpp  material_component.hpp  mesh_instance.cpp  mesh_instance.hpp  transformation.cpp  transformation.hpp
internal/engine/scene/components/interfaces/: component.hpp  component_visitor.hpp  material_component_visitor.hpp  mesh_instance_visitor.hpp  transformation_visitor.hpp
internal/engine/scene/interfaces/: scene_renderer.hpp
internal/engine/scene/ogl_renderer/: cubemap.cpp  cubemap.hpp  gl_helpers.hpp  gpu_cache.cpp  gpu_cache.hpp  material_config_resolver.cpp  material_config_resolver.hpp  scene_cache.cpp  scene_cache.hpp  scene_renderer.cpp  scene_renderer.hpp  shader_program.cpp  shader_program.hpp  texture_2d.cpp  texture_2d.hpp  texture_converter.cpp  texture_converter.hpp  vertex_buffer.cpp  vertex_buffer.hpp  vertices_data.cpp  vertices_data.hpp
internal/engine/scene/ogl_renderer/buffers/: buffer_object.cpp  buffer_object.hpp  vertex_array_object.cpp  vertex_array_object.hpp
internal/engine/scene/ogl_renderer/interfaces/: texture.hpp  vertex_buffer.hpp
internal/engine/scene/ogl_renderer/shaders/: shader.cpp  shader.hpp  shader_program.cpp  shader_program.hpp  shader_program_visitors.hpp
internal/engine/scene/ogl_renderer/textures/: texture_converter.cpp  texture_converter.hpp  texture_object.cpp  texture_object.hpp
internal/engine/shaders/: default.frag  default.vert  environment.frag  environment.vert  test.frag  test.vert
internal/libs/: libs.md
internal/resources/: resources.md
internal/resources/teapot/: Teapot_final.fbx
